# CodeSage

./: .gitignore  README.md
agent/: constants.py  pyproject.toml
agent/agent/: main.py
agent/agent/clients/: google.py  ollama.py
agent/agent/state/: agent_state.py
agent/agent/tools/: final_answer.py  list_files.py  read_file.py
agent/app/: config.py  main.py  server.py
agent/models/: agent_output.py  payload.py  response.py
backend/: bun.lockb  package.json
backend/controllers/: agentController.ts  healthController.ts  index.ts
backend/middlewares/: agentMiddleware.ts
backend/models/: agentResponse.ts  payload.ts
backend/routes/: agent.ts  health.ts  index.ts
backend/src/: index.ts
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/models/: agentResponse.ts
